[gd_scene load_steps=16 format=3 uid="uid://b3s4v476bx4im"]

[ext_resource type="Script" path="res://Scenes/main.gd" id="1_17sqh"]
[ext_resource type="PackedScene" uid="uid://cb2u1xa2snirr" path="res://Scenes/background.tscn" id="1_yhha4"]
[ext_resource type="Texture2D" uid="uid://q1wwd4ykfbd6" path="res://assets/Others/water_drop.png" id="3_hyuos"]
[ext_resource type="Texture2D" uid="uid://c00xchs3sh08n" path="res://assets/Others/button_pressed.png" id="3_s057h"]
[ext_resource type="Texture2D" uid="uid://p8p7sc81p1gp" path="res://assets/Others/button_normal.png" id="4_q61xj"]
[ext_resource type="Texture2D" uid="uid://byoplmvvffs74" path="res://assets/Others/green_circle.png" id="6_x13i0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nxu0x"]
atlas = ExtResource("3_hyuos")
region = Rect2(0, 0, 1560, 3000)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3c1c"]
atlas = ExtResource("3_hyuos")
region = Rect2(1560, 0, 1560, 3000)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxigo"]
atlas = ExtResource("3_hyuos")
region = Rect2(3120, 0, 1560, 3000)

[sub_resource type="AtlasTexture" id="AtlasTexture_bs63i"]
atlas = ExtResource("3_hyuos")
region = Rect2(4680, 0, 1560, 3000)

[sub_resource type="AtlasTexture" id="AtlasTexture_pn3pr"]
atlas = ExtResource("3_hyuos")
region = Rect2(6240, 0, 1560, 3000)

[sub_resource type="SpriteFrames" id="SpriteFrames_623aj"]
animations = [{
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_nxu0x")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_r3c1c")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_mxigo")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_bs63i")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_pn3pr")
}],
"loop": true,
"name": &"watering_plant",
"speed": 5.0
}]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ou72p"]
texture = ExtResource("3_s057h")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_h03nh"]
texture = ExtResource("4_q61xj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bfit7"]
texture = ExtResource("6_x13i0")

[node name="Main" type="Node2D"]
script = ExtResource("1_17sqh")

[node name="Background" parent="." instance=ExtResource("1_yhha4")]

[node name="Plant" type="Node2D" parent="Background"]

[node name="Watering" type="Node2D" parent="Background"]

[node name="WaterDrop" type="AnimatedSprite2D" parent="Background/Watering"]
visible = false
position = Vector2(1000, 128)
scale = Vector2(0.0934296, 0.0901667)
sprite_frames = SubResource("SpriteFrames_623aj")
animation = &"watering_plant"

[node name="PlantingButton" type="Button" parent="."]
offset_left = 321.0
offset_top = 263.0
offset_right = 738.0
offset_bottom = 367.0
theme_override_font_sizes/font_size = 48
theme_override_styles/pressed = SubResource("StyleBoxTexture_ou72p")
theme_override_styles/normal = SubResource("StyleBoxTexture_h03nh")
text = "Plantar"

[node name="HarvestButton" type="Button" parent="."]
visible = false
offset_left = 321.0
offset_top = 1704.0
offset_right = 738.0
offset_bottom = 1808.0
theme_override_font_sizes/font_size = 48
theme_override_styles/pressed = SubResource("StyleBoxTexture_bfit7")
theme_override_styles/normal = SubResource("StyleBoxTexture_h03nh")
text = "Cosechar"

[node name="WaterButton" type="Button" parent="."]
visible = false
offset_left = 79.0
offset_top = 834.0
offset_right = 311.0
offset_bottom = 1051.0
theme_override_font_sizes/font_size = 48
theme_override_styles/pressed = SubResource("StyleBoxTexture_bfit7")
theme_override_styles/normal = SubResource("StyleBoxTexture_h03nh")
text = "Regar"

[connection signal="pressed" from="PlantingButton" to="." method="_on_planting_button_pressed"]
[connection signal="pressed" from="HarvestButton" to="." method="_on_harvest_button_pressed"]
[connection signal="pressed" from="WaterButton" to="." method="_on_water_button_pressed"]
